Attempt 1 to resolve the overflow freeze on mobile

--- a/source/stylesheets/components/_background.scss
+++ b/source/stylesheets/components/_background.scss
@@ -14,7 +14,8 @@ html {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  overflow: hidden;
+  overflow: scroll;
+  -webkit-overflow-scrolling: touch;
   height: 100%;
 }
 
